# stopmotion

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  Makefile  Messages.sh  README  README.md  TODO  conf.pri  configure  stopmotion.1  stopmotion.desktop  stopmotion.mime  stopmotion.pro  stopmotion.pro.in
.qconftemp/: Makefile  conf.cpp  conf.pro
debian/: .gitignore  changelog  control  copyright  dirs  gbp.conf  manpages  menu  rules  stopmotion.1  stopmotion.doc-base  stopmotion.install  stopmotion.manpages  stopmotion.menu  stopmotion.mime  tmp_changelog  watch
debian/patches/: 0001-jpg-crash.patch  0002-pidof-not-ps-grep-cut.patch  0003-spelling-deamon.patch  0004-spelling-runned.patch  0005-spelling-automaticly.patch  0006-desktop-encoding-key.patch  debian-changes  gcc4.7.diff  series
graphics/: stopmotion.xpm  stopmotion_logo.xpm
graphics/icons/: addframeicon.xpm  cameraoff.xpm  cameraon.xpm  capture.xpm  clapper.xpm  close.xpm  closescene.xpm  configureicon.xpm  copyicon.xpm  cuticon.xpm  fastforward.xpm  filenewicon.xpm  fileopenicon.xpm  filesaveasicon.xpm  filesaveicon.xpm  gimp.xpm  home.xpm  languages.xpm  loop.xpm  newscene.xpm  nextframe.xpm  note.xpm  openscene.xpm  pasteicon.xpm  pause.xpm  play.xpm  previousframe.xpm  quiticon.xpm  redoicon.xpm  removeframeicon.xpm  removescene.xpm  rewind.xpm  steptobeginning.xpm  steptoend.xpm  stop.xpm  undoicon.xpm  videoexport.xpm  whatsthisicon.xpm  windowicon.xpm
html/: index.html  x126.html  x177.html  x205.html  x272.html  x275.html  x459.html  x88.html
html/screenshots/: gimp_1  gimp_2
manual/: index.html  x126.html  x177.html  x205.html  x211.html  x249.html  x272.html  x275.html  x30.html  x459.html  x69.html  x88.html
poqm/ar/: stopmotion_qt.po
poqm/ca/: stopmotion_qt.po
poqm/ca@valencia/: stopmotion_qt.po
poqm/cs/: stopmotion_qt.po
poqm/de/: stopmotion_qt.po
poqm/en_GB/: stopmotion_qt.po
poqm/eo/: stopmotion_qt.po
poqm/es/: stopmotion_qt.po
poqm/eu/: stopmotion_qt.po
poqm/fi/: stopmotion_qt.po
poqm/fr/: stopmotion_qt.po
poqm/ga/: stopmotion_qt.po
poqm/gl/: stopmotion_qt.po
poqm/he/: stopmotion_qt.po
poqm/ia/: stopmotion_qt.po
poqm/it/: stopmotion_qt.po
poqm/ja/: stopmotion_qt.po
poqm/ka/: stopmotion_qt.po
poqm/lt/: stopmotion_qt.po
poqm/nl/: stopmotion_qt.po
poqm/pl/: stopmotion_qt.po
poqm/pt/: stopmotion_qt.po
poqm/pt_BR/: stopmotion_qt.po
poqm/sa/: stopmotion_qt.po
poqm/sk/: stopmotion_qt.po
poqm/sl/: stopmotion_qt.po
poqm/sv/: stopmotion_qt.po
poqm/tr/: stopmotion_qt.po
poqm/uk/: stopmotion_qt.po
poqm/x-test/: stopmotion_qt.po
poqm/zh_CN/: stopmotion_qt.po
poqm/zh_TW/: stopmotion_qt.po
src/: config.cpp  config.cpp.in  config.h  main.cpp
src/application/: camerahandler.cpp  camerahandler.h  editmenuhandler.cpp  editmenuhandler.h  externalchangemonitor.cpp  externalchangemonitor.h  externalcommand.cpp  externalcommand.h  externalcommandwithtemporarydirectory.cpp  externalcommandwithtemporarydirectory.h  languagehandler.cpp  languagehandler.h  modelhandler.cpp  modelhandler.h  runanimationhandler.cpp  runanimationhandler.h  soundhandler.cpp  soundhandler.h
src/domain/: domainfacade.cpp  domainfacade.h  filenamevisitor.h  observernotifier.cpp  observernotifier.h
src/domain/animation/: animation.cpp  animation.h  animationimpl.cpp  animationimpl.h  animationmodel.cpp  animationmodel.h  errorhandler.cpp  errorhandler.h  frame.cpp  frame.h  scene.cpp  scene.h  scenevector.cpp  scenevector.h  sound.cpp  sound.h  workspacefile.cpp  workspacefile.h
src/domain/undo/: README.md  addallcommands.cpp  addallcommands.h  command.cpp  command.h  commandadd.cpp  commandadd.h  commandaddscene.cpp  commandaddscene.h  commandaddsound.cpp  commandaddsound.h  commandduplicateimage.cpp  commandduplicateimage.h  commandfactory.cpp  commandfactory.h  commandlogger.cpp  commandlogger.h  commandmove.cpp  commandmove.h  commandmovescene.cpp  commandmovescene.h  commandremove.cpp  commandremove.h  commandremovescene.cpp  commandremovescene.h  commandremovesound.cpp  commandremovesound.h  commandrenamesound.cpp  commandrenamesound.h  commandsetimage.cpp  commandsetimage.h  executor.cpp  executor.h  filelogger.cpp  filelogger.h  logger.cpp  logger.h  random.cpp  random.h  replay.cpp  (+28 more)
src/foundation/: logger.cpp  logger.h  preferencestool.cpp  preferencestool.h  stringwriter.cpp  stringwriter.h  uiexception.cpp  uiexception.h
src/presentation/: imagecache.cpp  imagecache.h  loadcache.h  observer.h
src/presentation/frontends/: frontend.cpp  frontend.h  selection.h
src/technical/: packer.c  packer.h  projectserializer.cpp  projectserializer.h  stringiterator.cpp  stringiterator.h  util.cpp  util.h
src/technical/audio/: audiodriver.cpp  audiodriver.h  audioformat.cpp  audioformat.h  oggvorbis.cpp  oggvorbis.h  ossdriver.cpp  (+5 more)
src/test/: .gitignore  CMakeLists.txt  check.h  fakefiles.cpp  fakefiles.h  hash.cpp  hash.h  oomtestdummy.cpp  oomteststub.c  oomteststub.cpp  oomtestutil.c  oomtestutil.cpp  oomtestutil.h  oomtestutil.mak  taudiodecoder.cpp  tcache.cpp  tcache.h  test.pro  testhome.cpp  testhome.h  testoom.cpp  testundo.cpp  testundo.h  texecutor.cpp  texecutor.h  tmain.cpp  toggvorbis.cpp  treplay.cpp  treplay.h  tstopmotionundo.cpp  tstopmotionundo.h  tworkspace.cpp  tworkspace.h
translations/: CMakeLists.txt  stopmotion_ar.ts  stopmotion_br.ts  stopmotion_cz.qm  stopmotion_cz.ts  stopmotion_de.qm  stopmotion_de.ts  stopmotion_dk.qm  stopmotion_dk.ts  stopmotion_es.qm  stopmotion_es.ts  stopmotion_fi.ts  stopmotion_fr.qm  stopmotion_fr.ts  stopmotion_gr.ts  stopmotion_he.ts  stopmotion_it.qm  stopmotion_it.ts  stopmotion_kl.qm  stopmotion_kl.ts  stopmotion_no_nb.qm  stopmotion_no_nb.ts  stopmotion_no_nn.qm  stopmotion_no_nn.ts  stopmotion_no_se.ts  stopmotion_pt.qm  stopmotion_pt.ts  stopmotion_ru.ts  stopmotion_se.qm  stopmotion_se.ts  stopmotion_sl.qm  stopmotion_sl.ts  stopmotion_sv.ts  stopmotion_tr.qm  stopmotion_tr.ts  stopmotion_zh_CN.ts  stopmotion_zh_TW.qm  stopmotion_zh_TW.ts  translations.qrc
(+80 files in other folders)
